--- a/Practica2/index.html
+++ b/Practica2/index.html
@@ -5,7 +5,6 @@
 		<link rel="stylesheet" type="text/css" href="reset.css" />
 		<link rel="stylesheet" type="text/css" href="estil.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-
 	</head>
 
     <body>
@@ -24,8 +23,8 @@
                     </div>
                 </picture>
                 <picture class="bucky">
-                    <source srcset="./img/sm/bucky.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/bucky.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/bucky.png" media="(max-width: 730)">
+                    <source srcset="./img/land/bucky.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/bucky.png">
                     <div class="lletres">
                         <p>2</p>
@@ -33,8 +32,8 @@
                     </div>
                 </picture>
                 <picture class="bw">
-                    <source srcset="./img/sm/bw.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/bw.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/bw.png" media="(max-width: 730)">
+                    <source srcset="./img/land/bw.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/bw.png">
                     <div class="lletres">
                         <p>3</p>
@@ -42,8 +41,8 @@
                     </div>
                 </picture>
                 <picture class="cap">
-                    <source srcset="./img/sm/cap.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/cap.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/cap.png" media="(max-width: 730)">
+                    <source srcset="./img/land/cap.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/cap.png">
                     <div class="lletres">
                         <p>4</p>
@@ -51,8 +50,8 @@
                     </div>
                 </picture>
                 <picture class="drax">
-                    <source srcset="./img/sm/drax.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/drax.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/drax.png" media="(max-width: 730)">
+                    <source srcset="./img/land/drax.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/drax.png">
                     <div class="lletres">
                         <p>4</p>
@@ -60,8 +59,8 @@
                     </div>
                 </picture>
                 <picture class="falcon">
-                    <source srcset="./img/sm/falcon.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/falcon.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/falcon.png" media="(max-width: 730)">
+                    <source srcset="./img/land/falcon.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/falcon.png">
                     <div class="lletres">
                         <p>5</p>
@@ -69,8 +68,8 @@
                     </div>
                 </picture>
                 <picture class="fury">
-                    <source srcset="./img/sm/fury.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/fury.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/fury.png" media="(max-width: 730)">
+                    <source srcset="./img/land/fury.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/fury.png">
                     <div class="lletres">
                         <p>6</p>
@@ -78,8 +77,8 @@
                     </div>
                 </picture>
                 <picture class="gamora">
-                    <source srcset="./img/sm/gamora.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/gamora.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/gamora.png" media="(max-width: 730)">
+                    <source srcset="./img/land/gamora.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/gamora.png">
                     <div class="lletres">
                         <p>7</p>
@@ -87,8 +86,8 @@
                     </div>
                 </picture>
                 <picture class="groot">
-                    <source srcset="./img/sm/groot.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/groot.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/groot.png" media="(max-width: 730)">
+                    <source srcset="./img/land/groot.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/groot.png">
                     <div class="lletres">
                         <p>8</p>
@@ -96,8 +95,8 @@
                     </div>
                 </picture>
                 <picture class="hawkeye">
-                    <source srcset="./img/sm/hawkeye.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/hawkeye.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/hawkeye.png" media="(max-width: 730)">
+                    <source srcset="./img/land/hawkeye.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/hawkeye.png">
                     <div class="lletres">
                         <p>9</p>
@@ -105,8 +104,8 @@
                     </div>
                 </picture>
                 <picture class="hulk">
-                    <source srcset="./img/sm/hulk.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/hulk.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/hulk.png" media="(max-width: 730)">
+                    <source srcset="./img/land/hulk.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/hulk.png">
                     <div class="lletres">
                         <p>10</p>
@@ -114,8 +113,8 @@
                     </div>
                 </picture>
                 <picture class="ironman">
-                    <source srcset="./img/sm/ironman.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/ironman.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/ironman.png" media="(max-width: 730)">
+                    <source srcset="./img/land/ironman.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/ironman.png">
                     <div class="lletres">
                         <p>11</p>
@@ -123,8 +122,8 @@
                     </div>
                 </picture>
                 <picture class="mantis">
-                    <source srcset="./img/sm/mantis.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/mantis.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/mantis.png" media="(max-width: 730)">
+                    <source srcset="./img/land/mantis.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/mantis.png">
                     <div class="lletres">
                         <p>12</p>
@@ -132,8 +131,8 @@
                     </div>
                 </picture>
                 <picture class="maria">
-                    <source srcset="./img/sm/maria.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/maria.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/maria.png" media="(max-width: 730)">
+                    <source srcset="./img/land/maria.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/maria.png">
                     <div class="lletres">
                         <p>13</p>
@@ -141,8 +140,8 @@
                     </div>
                 </picture>
                 <picture class="marvel">
-                    <source srcset="./img/sm/marvel.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/marvel.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/marvel.png" media="(max-width: 730)">
+                    <source srcset="./img/land/marvel.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/marvel.png">
                     <div class="lletres">
                         <p>14</p>
@@ -150,8 +149,8 @@
                     </div>
                 </picture>
                 <picture class="nebula">
-                    <source srcset="./img/sm/nebula.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/nebula.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/nebula.png" media="(max-width: 730)">
+                    <source srcset="./img/land/nebula.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/nebula.png">
                     <div class="lletres">
                         <p>15</p>
@@ -159,8 +158,8 @@
                     </div>
                 </picture>
                 <picture class="rhodes">
-                    <source srcset="./img/sm/rhodes.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/rhodes.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/rhodes.png" media="(max-width: 730)">
+                    <source srcset="./img/land/rhodes.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/rhodes.png">
                     <div class="lletres">
                         <p>16</p>
@@ -168,8 +167,8 @@
                     </div>
                 </picture>
                 <picture class="scarlet">
-                    <source srcset="./img/sm/scarlet.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/scarlet.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/scarlet.png" media="(max-width: 730)">
+                    <source srcset="./img/land/scarlet.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/scarlet.png">
                     <div class="lletres">
                         <p>17</p>
@@ -177,8 +176,8 @@
                     </div>
                 </picture>
                 <picture class="shuri">
-                    <source srcset="./img/sm/shuri.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/shuri.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/shuri.png" media="(max-width: 730)">
+                    <source srcset="./img/land/shuri.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/shuri.png">
                     <div class="lletres">
                         <p>18</p>
@@ -186,8 +185,8 @@
                     </div>
                 </picture>
                 <picture class="starlord">
-                    <source srcset="./img/sm/starlord.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/starlord.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/starlord.png" media="(max-width: 730)">
+                    <source srcset="./img/land/starlord.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/starlord.png">
                     <div class="lletres">
                         <p>19</p>
@@ -195,8 +194,8 @@
                     </div>
                 </picture>
                 <picture class="thanos">
-                    <source srcset="./img/sm/thanos.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/thanos.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/thanos.png" media="(max-width: 730)">
+                    <source srcset="./img/land/thanos.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/thanos.png">
                     <div class="lletres">
                         <p>20</p>
@@ -204,8 +203,8 @@
                     </div>
                 </picture>
                 <picture class="thor">
-                    <source srcset="./img/sm/thor.png" media="(max-width: 800px)">
-                    <source srcset="./img/land/thor.png" media="(min-width:1101px   max-width: 1600px)">
+                    <source srcset="./img/sm/thor.png" media="(max-width: 730)">
+                    <source srcset="./img/land/thor.png" media="(max-width:1150px   min-width: 730)">
                     <img src="img/lg/thor.png">
                     <div class="lletres">
                         <p>21</p>
