--- a/Practica3/index.html
+++ b/Practica3/index.html
@@ -10,48 +10,47 @@
 	</head>
 
     <body class="container-fluid p-0">
-      <header class="container-fluid text-white bg-dark bg-gradient d-flex d-lg-justify-content-center">
-        <nav class="navbar navbar-expand-lg navbar-expand-sm container-fluid">
-            <div class="container-fluid">
-                <div class="collapse navbar-collapse container-fluid" id="navbarSupportedContent">
-                    <ul class="navbar-nav align-items-center container">
-                        <li class="nav-item">
-                            <h4 class="nav-link me-1">⚙️</h4>
-                        </li>
-                        <li class="nav-item me-5">
-                            <h4 class="nav-link text-light">Travel Services</h4>
-                        </li>
-                        <li class="nav-item me-5   d-lg-block">
-                            <a class="nav-link text-light" href="#">Home</a>
-                        </li >
-                        <li class="nav-item dropdown me-5 d-none d-lg-block">
-                            <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Our Services</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Flights</a></li>
-                                <li><a class="dropdown-item" href="#">Hotels</a></li>
-                                <li><a class="dropdown-item" href="#">Contact</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item me-5 d-none d-lg-block">
-                          <a class="nav-link text-light" href="#">Flights</a>
-                        </li>
-                        <li class="nav-item me-5 d-none d-lg-block">
-                          <a class="nav-link text-light" href="#">Hotels</a>
-                        </li>
-                        <li class="nav-item me-5 d-none d-lg-block">
-                          <a class="nav-link text-light" href="#">Contact</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex con d-none d-lg-block d-lg-flex justify-content-end">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                </div>
-            </div>
+      <header class="container-fluid text-white bg-dark bg-gradient">
+        <nav class="navbar navbar-expand navbar-light container-fluid">
+          <div class="container-fluid">
+              <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+                  <ul class="navbar-nav align-items-center">
+                      <li class="nav-item titol">
+                          <a class="nav-link text-white" href="#">⚙️ Travel Service</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link text-white" href="#">Home</a>
+                      </li>
+                      <li class="nav-item dropdown d-none d-lg-block">
+                          <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              Our Services
+                          </a>
+                          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <li><a class="dropdown-item" href="#">Our Services</a></li>
+                              <li><a class="dropdown-item" href="#">Our Services</a></li>
+                              <li><a class="dropdown-item" href="#">Our Services</a></li>
+                          </ul>
+                      </li>
+                      <li class="nav-item d-none d-lg-block">
+                          <a class="nav-link text-white" href="#">Flights</a>
+                      </li>
+                      <li class="nav-item d-none d-lg-block">
+                          <a class="nav-link text-white" href="#">Hotels</a>
+                      </li>
+                      <li class="nav-item d-none d-lg-block">
+                          <a class="nav-link text-white" href="#">Contact</a>
+                      </li>
+                  </ul>
+                  <form class="d-none d-lg-flex ms-auto">
+                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-success" type="submit">Search</button>
+                  </form>
+              </div>
+          </div>
         </nav>
-    </header>
+      </header>
 
-<!-- 
+
         <main class="container-fluid p-0">
             <div id="carrousel" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-indicators">
@@ -367,7 +366,7 @@
               </div>
             </div>
           </div>
-        </footer> -->
+        </footer>
     </body>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
