--- a/Practica3/index.html
+++ b/Practica3/index.html
@@ -98,54 +98,54 @@
                 </div>
               <div id="barres" class="container my-5 px-5">
                 <div class="row justify-content-center">
-                  <div class="col-2 d-flex justify-content-end container-fluid">
+                  <div class="col-lg-2 col-sm-2 col-2 d-flex justify-content-end container-fluid">
                     <p>OUR TEAM</p>
                   </div>
-                  <div class="col-lg-4 col-sm-10">
+                  <div class="col-lg-4 col-sm-10 col-10">
                     <div class="progress altura anchura">
                       <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
-                  <div class="col-2 d-flex mt-sm-2 justify-content-end container-fluid">
+                  <div class="col-2 d-flex mt-sm-2 mt-2 justify-content-end container-fluid">
                     <p>SPEED</p>
                   </div>
-                  <div class="col-lg-4 col-sm-10 mt-sm-2">
+                  <div class="col-lg-4 col-sm-10 col-10 mt-sm-2 mt-2">
                     <div class="progress altura">
                       <div class="progress-bar progress-bar-striped bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
                 <div class="row mt-lg-4 mt-sm-2 justify-content-center">
-                  <div class="col-2 d-flex mt-sm-2 justify-content-end container-fluid">
+                  <div class="col-2 d-flex mt-sm-2 mt-3 justify-content-end container-fluid">
                     <p>EXPERIENCE</p>
                   </div>
-                  <div class="col-lg-4 col-sm-10 mt-sm-2">
+                  <div class="col-lg-4 col-sm-10 col-10 mt-sm-2 mt-3">
                     <div class="progress altura">
                       <div class="progress-bar progress-bar-striped bg-primary" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
-                  <div class="col-2 d-flex mt-sm-3 justify-content-end container-fluid">
+                  <div class="col-2 d-flex mt-sm-3 mt-3 justify-content-end container-fluid">
                     <p>KNOW-HOW</p>
                   </div>
-                  <div class="col-lg-4 col-sm-10 mt-sm-3">
+                  <div class="col-lg-4 col-sm-10 col-10 mt-sm-3 mt-3">
                     <div class="progress altura">
                       <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
                 <div class="row mt-lg-3 mt-sm-2 justify-content-center">
-                  <div class="col-2 d-flex mt-sm-2 justify-content-end container-fluid">
+                  <div class="col-2 d-flex mt-sm-2 mt-3 justify-content-end container-fluid">
                     <p>CUSTOMER-SERVICE</p>
                   </div>
-                  <div class="col-lg-4 col-sm-10 mt-sm-2">
+                  <div class="col-lg-4 col-sm-10 col-10 mt-sm-2 mt-3">
                     <div class="progress altura">
                       <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
-                  <div class="col-2 d-flex mt-sm-3 justify-content-end container-fluid">
+                  <div class="col-2 d-flex mt-sm-3 mt-3 justify-content-end container-fluid">
                     <p>R+D</p>
                   </div>
-                  <div class="col-lg-4 col-sm-10 mt-sm-3">
+                  <div class="col-lg-4 col-sm-10 col-10 mt-sm-3 mt-3">
                     <div class="progress altura">
                       <div class="progress-bar progress-bar-striped bg-primary" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -293,10 +293,10 @@
                     <div class="row">
                       <div class="accordion accordion-flush" id="acc">
                         <div class="accordion-item">
-                          <p class="accordion-header ms-4" id="flush-headingOne">F.A.Q. ?!</p>
+                          <p class="accordion-header ms-lg-4" id="flush-headingOne">F.A.Q. ?!</p>
                         </div>
                         <div class="accordion-item">
-                          <p class="accordion-header ms-4" id="flush-headingOne">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo</p>
+                          <p class="accordion-header ms-lg-4 d-flex justify-center" id="flush-headingOne">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo</p>
                         </div>
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="flush-headingOne">
