--- a/Practica3/index.html
+++ b/Practica3/index.html
@@ -195,7 +195,7 @@
                 <p class="text-center">Morbi libero elit elementum quis faucibus ac, condimentum quis nibh.<button type="button" class="btn btn-primary btn-lg ms-2">View all Works?</button></p>
                  <div class="container mt-5 mx-auto">
                   <div class="row justify-content-sm-center">
-                    <div class="col-lg-4 col-sm-8 p-0 m-0">
+                    <div class="col-lg-4 col-sm-8 p-0 m-0 hover">
                       <img src="./imatges/recomendacions/img1.avif" class="img-fluid">
                     </div>
                     <div class="col-lg-4 col-sm-8 p-0 m-0">
