--- a/Practica3/index.html
+++ b/Practica3/index.html
@@ -155,7 +155,7 @@
               </div>
 
               <div id="emotes" class="container-fluid mt-5 px-5 bg-light">
-                <div class="row mt-5">
+                <div class="row mt-5 d-sm-flex">
                   <div class="col">
                     <img src="./imatges/emoticonos/avion.png" class="d-block w-foto mx-auto">
                   </div>
@@ -166,7 +166,7 @@
                     <img src="./imatges/emoticonos/tarjeta.png" class="d-block w-foto mx-auto">
                   </div>
                 </div>
-                <div class="row mt-3">
+                <!-- <div class="row mt-3">
                   <div class="col">
                     <h1 class="text-center">Low-cost Flights</h1>
                   </div>
@@ -187,7 +187,7 @@
                   <div class="col d-flex justify-content-center">
                     <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, Proin non odio sed eros tristeque</p>
                   </div>
-                </div>
+                </div> -->
               </div>
 
               <div id="recomendacions" class="container my-5">
