--- a/PracticaFinal/index.html
+++ b/PracticaFinal/index.html
@@ -10,39 +10,38 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">		
         <link rel="stylesheet" type="text/css" href="estil.css" />
 	</head>
-    <body>
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Opción 1</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Opción 2</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Opción 3</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Opción 4</a>
-                      </li>
-                    </ul>
-                    <span class="navbar-text mx-auto">
-                      Palabra Central
-                    </span>
-                    <form class="d-flex">
-                      <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-                      <button class="btn btn-outline-success" type="submit">Buscar</button>
-                    </form>
-                  </div>
-                </div>
-              </nav>
-        </header>
+  <body>
+      <header>
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <div class="container-fluid">
+              <div class="d-flex">
+                  <p class="navbar textNav ms-5 p2">Home</p>
+                  <p class="navbar textNav ms-5 p2">Catalog</p>
+                  <p class="navbar textNav ms-5 p2">Contact</p>
+                  <p class="navbar textNav ms-5 p2">Features</p>
+              </div>
+              <div class="mx-auto">
+                  <img src="./assets/logo.png" alt="Logo" style="max-height: 40px;">
+              </div>
+              <div class="d-flex">
+                <form class="d-flex">
+                    <div class="input-group opacitatBuscador">
+                        <input class="form-control" type="search" placeholder="Buscar" aria-label="Buscar">
+                        <button class="btn" type="submit">
+                            <i class="bi bi-search"></i>
+                        </button>
+                    </div>
+                </form>
+            </div>
+          </div>
+        </nav>
+      </header>
+
+      <div id="part1">
+        <p class="p1">VIRTUAL HEADSETS</p>
+        <!-- <img src="./assets/jhonn.png"> -->
+        <h1 class="">Experience a new dimension of reality</h1>
+      </div>
     </body>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
