--- a/PracticaFinal/index.html
+++ b/PracticaFinal/index.html
@@ -12,10 +12,10 @@
 	</head>
   <body>
       <header>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light m-auto">
           <div class="container-fluid">
               <div class="d-flex">
-                  <p class="navbar textNav ms-5 p2">Home</p>
+                  <p class="navbar textNav p2">Home</p>
                   <p class="navbar textNav ms-5 p2">Catalog</p>
                   <p class="navbar textNav ms-5 p2">Contact</p>
                   <p class="navbar textNav ms-5 p2">Features</p>
@@ -38,9 +38,13 @@
       </header>
 
       <div id="part1">
-        <p class="p1">VIRTUAL HEADSETS</p>
-        <!-- <img src="./assets/jhonn.png"> -->
-        <h1 class="">Experience a new dimension of reality</h1>
+        <div id="partesquerra">
+          <p class="p1">VIRTUAL HEADSETS</p>
+          <h1 class="">Experience a new dimension of reality</h1>
+        </div>
+        <div id="partdreta">
+          <img src="./assets/jhonn.png">
+        </div>
       </div>
     </body>
 
