--- a/PracticaFinal/index.html
+++ b/PracticaFinal/index.html
@@ -41,6 +41,17 @@
         <div id="partesquerra">
           <p class="p1">VIRTUAL HEADSETS</p>
           <h1 class="">Experience a new dimension of reality</h1>
+          <div class="container">
+            <div class="estrella"></div>
+            <p class="p2">Step into the future with our visual headset, come to life right before your eyes</p>
+          </div>
+          <button type="button" class="btn">Visit store
+            <div class="flecha"></div>
+          </button>
+          <button type="button" class="btn">
+            <div class="brujula"></div>
+            Explore
+          </button>
         </div>
         <div id="partdreta">
           <img src="./assets/jhonn.png">
