--- a/PracticaFinal/index.html
+++ b/PracticaFinal/index.html
@@ -14,11 +14,11 @@
       <header>
         <nav class="navbar navbar-expand-lg navbar-light m-auto">
           <div class="container-fluid">
-              <div class="d-flex">
+              <div class="navegacio">
                   <p class="navbar textNav p2">Home</p>
-                  <p class="navbar textNav ms-5 p2">Catalog</p>
-                  <p class="navbar textNav ms-5 p2">Contact</p>
-                  <p class="navbar textNav ms-5 p2">Features</p>
+                  <p class="navbar textNav p2">Catalog</p>
+                  <p class="navbar textNav p2">Contact</p>
+                  <p class="navbar textNav p2">Features</p>
               </div>
               <div class="mx-auto">
                   <img src="./assets/logo.png" alt="Logo" style="max-height: 40px;">
@@ -40,21 +40,47 @@
       <div id="part1">
         <div id="partesquerra">
           <p class="p1">VIRTUAL HEADSETS</p>
-          <h1 class="">Experience a new dimension of reality</h1>
+          <h1 class="exp">Experience a new dimension of reality</h1>
           <div class="container">
             <div class="estrella"></div>
             <p class="p2">Step into the future with our visual headset, come to life right before your eyes</p>
           </div>
-          <button type="button" class="btn">Visit store
-            <div class="flecha"></div>
-          </button>
-          <button type="button" class="btn">
-            <div class="brujula"></div>
-            Explore
-          </button>
+          <div class="botons">
+            <button type="button" class="btn bot1">
+              <p class="p1">Visit store</p>
+              <div class="flecha"></div>
+            </button>
+            <button type="button" class="btn bot2">
+              <div class="brujula"></div>
+              <p class="p1">Explore</p>
+            </button>
+          </div>
+          <p class="p2">FOLLOW US</p>
+          <div class="emoticonos">
+            <div class="e1"></div>
+            <div class="e2"></div>
+            <div class="e3"></div>
+            <div class="e4"></div>
+          </div>
         </div>
         <div id="partdreta">
           <img src="./assets/jhonn.png">
+          <div class="paraules">
+            <p class="p3">Hello, Jhon</p>
+            <p class="p3">Discover new world</p>
+            <p class="p3">Ultra reality</p>
+            <p class="p3">+100 Games</p>
+          </div>
+          <div class="dos">
+            <div>
+              <div class="em1"></div>
+              <p class="p1"> Enhanced Education</p>
+            </div>
+            <div>
+              <div class="em2"></div>
+              <p class="p1"> Enhanced Education</p>
+            </div>
+          </div>
         </div>
       </div>
     </body>
