--- a/PracticaFinal/index.html
+++ b/PracticaFinal/index.html
@@ -11,79 +11,107 @@
         <link rel="stylesheet" type="text/css" href="estil.css" />
 	</head>
   <body>
-      <header>
-        <nav class="navbar navbar-expand-lg navbar-light m-auto">
-          <div class="container-fluid">
-              <div class="navegacio">
-                  <p class="navbar textNav p2">Home</p>
-                  <p class="navbar textNav p2">Catalog</p>
-                  <p class="navbar textNav p2">Contact</p>
-                  <p class="navbar textNav p2">Features</p>
+    <div id="fons1">
+      <div class="div1">
+        <header>
+          <nav class="navbar navbar-expand-lg navbar-light m-auto">
+            <div class="container-fluid">
+                <div class="navegacio">
+                    <p class="navbar textNav p2">Home</p>
+                    <p class="navbar textNav p2">Catalog</p>
+                    <p class="navbar textNav p2">Contact</p>
+                    <p class="navbar textNav p2">Features</p>
+                </div>
+                <div class="mx-auto">
+                    <img src="./assets/logo.png" alt="Logo" style="max-height: 40px;">
+                </div>
+                <div class="d-flex">
+                  <form class="d-flex">
+                      <div class="input-group opacitatBuscador">
+                          <input class="form-control" type="search" placeholder="Buscar" aria-label="Buscar">
+                          <button class="btn" type="submit">
+                              <i class="bi bi-search"></i>
+                          </button>
+                      </div>
+                  </form>
               </div>
-              <div class="mx-auto">
-                  <img src="./assets/logo.png" alt="Logo" style="max-height: 40px;">
-              </div>
-              <div class="d-flex">
-                <form class="d-flex">
-                    <div class="input-group opacitatBuscador">
-                        <input class="form-control" type="search" placeholder="Buscar" aria-label="Buscar">
-                        <button class="btn" type="submit">
-                            <i class="bi bi-search"></i>
-                        </button>
-                    </div>
-                </form>
+            </div>
+          </nav>
+        </header>
+    
+        <div id="part1">
+          <div id="partesquerra">
+            <p class="p1">VIRTUAL HEADSETS</p>
+            <h1 class="exp">Experience a new dimension of reality</h1>
+            <div class="container">
+              <div class="estrella"></div>
+              <p class="p2">Step into the future with our visual headset, come to life right before your eyes</p>
+            </div>
+            <div class="botons">
+              <button type="button" class="btn bot1">
+                <p class="p1">Visit store</p>
+                <div class="flecha"></div>
+              </button>
+              <button type="button" class="btn bot2">
+                <div class="brujula"></div>
+                <p class="p1">Explore</p>
+              </button>
+            </div>
+            <p class="p2">FOLLOW US</p>
+            <div class="emoticonos">
+              <div class="e1"></div>
+              <div class="e2"></div>
+              <div class="e3"></div>
+              <div class="e4"></div>
             </div>
           </div>
-        </nav>
-      </header>
-
-      <div id="part1">
-        <div id="partesquerra">
-          <p class="p1">VIRTUAL HEADSETS</p>
-          <h1 class="exp">Experience a new dimension of reality</h1>
-          <div class="container">
-            <div class="estrella"></div>
-            <p class="p2">Step into the future with our visual headset, come to life right before your eyes</p>
-          </div>
-          <div class="botons">
-            <button type="button" class="btn bot1">
-              <p class="p1">Visit store</p>
-              <div class="flecha"></div>
-            </button>
-            <button type="button" class="btn bot2">
-              <div class="brujula"></div>
-              <p class="p1">Explore</p>
-            </button>
-          </div>
-          <p class="p2">FOLLOW US</p>
-          <div class="emoticonos">
-            <div class="e1"></div>
-            <div class="e2"></div>
-            <div class="e3"></div>
-            <div class="e4"></div>
-          </div>
-        </div>
-        <div id="partdreta">
-          <img src="./assets/jhonn.png">
-          <div class="paraules">
-            <p class="p3">Hello, Jhon</p>
-            <p class="p3">Discover new world</p>
-            <p class="p3">Ultra reality</p>
-            <p class="p3">+100 Games</p>
-          </div>
-          <div class="dos">
-            <div>
-              <div class="em1"></div>
-              <p class="p1"> Enhanced Education</p>
+          <div id="partdreta">
+            <img src="./assets/jhonn.png">
+            <div class="paraules">
+              <p class="p3">Hello, Jhon</p>
+              <p class="p3">Discover new world</p>
+              <p class="p3">Ultra reality</p>
+              <p class="p3">+100 Games</p>
             </div>
-            <div>
-              <div class="em2"></div>
-              <p class="p1"> Enhanced Education</p>
+            <div class="dos">
+              <div>
+                <div class="em1"></div>
+                <p class="p1"> Enhanced Education</p>
+              </div>
+              <div>
+                <div class="em2"></div>
+                <p class="p1"> Enhanced Education</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </body>
+    </div>
+
+    <div id="part2" class="container-fluid">
+      <div class="contingut2">
+        <div class="row">
+          <div class="col ulleres">
+            <img src="./assets/lens.png">
+          </div>
+          <div class="col col2">
+            <div class="row"> 
+              <h2>Our Virtual Headset Shine with Unique Features!</h2>
+            </div>
+            <div class="row">
+              <div class="col">
+                <div class="row">
+                  <p class="p1"><!--High-resolution OLED or LCD screens: Provide sharp and clear visuals.--></p>
+                  <p class="p1">High-resolution OLED or LCD screens: Provide sharp and clear visuals.</p>
+                  <p class="p1">High-resolution OLED or LCD screens: Provide sharp and clear visuals.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </html>
