--- a/PracticaFinal/index.html
+++ b/PracticaFinal/index.html
@@ -103,7 +103,7 @@
                 <div class="row">
                   <p class="p1"><!--High-resolution OLED or LCD screens: Provide sharp and clear visuals.--></p>
                   <p class="p1">High-resolution OLED or LCD screens: Provide sharp and clear visuals.</p>
-                  <p class="p1">High-resolution OLED or LCD screens: Provide sharp and clear visuals.</p>
+                  <!-- <p class="p1">High-resolution OLED or LCD screens: Provide sharp and clear visuals.</p> -->
                 </div>
               </div>
             </div>
