--- a/PracticaFinal/index.html
+++ b/PracticaFinal/index.html
@@ -98,12 +98,27 @@
             <div class="row"> 
               <h2>Our Virtual Headset Shine with Unique Features!</h2>
             </div>
-            <div class="row">
+            <div class="row mt-4">
               <div class="col">
                 <div class="row">
-                  <p class="p1"><!--High-resolution OLED or LCD screens: Provide sharp and clear visuals.--></p>
                   <p class="p1">High-resolution OLED or LCD screens: Provide sharp and clear visuals.</p>
-                  <!-- <p class="p1">High-resolution OLED or LCD screens: Provide sharp and clear visuals.</p> -->
+                </div>
+                <div class="row">
+                  <p class="p1">High-resolution OLED or LCD screens: Provide sharp and clear visuals.</p>
+                </div>
+                <div class="row">
+                  <p class="p1">High-resolution OLED or LCD screens: Provide sharp and clear visuals.</p>
+                </div>
+              </div>
+              <div class="col">
+                <div class="row">
+                  <p class="p1">High-resolution OLED or LCD screens: Provide sharp and clear visuals.</p>
+                </div>
+                <div class="row">
+                  <p class="p1">High-resolution OLED or LCD screens: Provide sharp and clear visuals.</p>
+                </div>
+                <div class="row">
+                  <p class="p1">High-resolution OLED or LCD screens: Provide sharp and clear visuals.</p>
                 </div>
               </div>
             </div>
