--- a/PracticaFinal/index.html
+++ b/PracticaFinal/index.html
@@ -98,7 +98,7 @@
             <div class="row"> 
               <h2>Our Virtual Headset Shine with Unique Features!</h2>
             </div>
-            <div class="row mt-4">
+            <div class="row mt-5">
               <div class="col">
                 <div class="row">
                   <p class="p1">High-resolution OLED or LCD screens: Provide sharp and clear visuals.</p>
@@ -122,6 +122,69 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="contingut3">
+        <div class="row">
+          <div class="col mt-5">
+            <div class="row">
+              <h2 class="jane">Jane Wilson, Gaming Creator</h2>
+            </div>
+            <div class="row mt-4">
+              <p class="p1 vhead">A virtual headset creator is an individual or company that specializes in designing and manufacturing virtual reality headset, also know as VR headsets.</p>
+            </div>
+            <div class="row">
+              <button type="button" class="btn mt-4">
+                <span class="p1">Read my blog</span>
+                <span class="flecha"></span>
+              </button>  
+            </div>
+          </div>
+          <div class="col">
+            <img src="./assets/play.png" class="play">
+          </div>
+        </div>
+      </div>
+
+      <div class="contingut4">
+        <div class="row">
+          <div class="col d-flex justify-content-center align-items-center">
+            <h2>Top Games</h2>
+          </div>
+          <div class="col d-flex justify-content-center align-items-center">
+            <p class="p3">If you buy video 2 games, you will recive 1 video game for free, along with a 50% discount.</p>
+          </div>
+          <div class="col botons d-flex justify-content-center align-items-center">
+            <button type="button" class="btn mt-4">
+              <span class="flecha"></span>
+            </button>  
+            <button type="button" class="btn mt-4">
+              <span class="flecha"></span>
+            </button>  
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col d-flex justify-content-center align-items-center">
+            <img src="./assets/g1.png" alt="">
+          </div>
+          <div class="col d-flex justify-content-center align-items-center">
+            <img src="./assets/g2.png" alt="">
+          </div>
+          <div class="col d-flex justify-content-center align-items-center">
+            <img src="./assets/g3.png" alt="">
+          </div>
+        </div>
+        <div class="row mt-2">
+          <div class="col">
+            <p class="p1">Horizon : Call of the mountain</p>
+          </div>
+          <div class="col">
+            <p class="p1">Half - Life : ALYX</p>
+          </div>
+          <div class="col">
+            <p class="p1">Fight NMight Champion</p>
           </div>
         </div>
       </div>
